ikke funk krav rapport

--- a/ProjektRapport/sektioner/NotFunc.tex
+++ b/ProjektRapport/sektioner/NotFunc.tex
@@ -2,3 +2,29 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{Ikke Funktionelle Krav}
+I dette afsnit beskrives de ikke funktionelle krav. Der findes ikke funktionelle krav til trintransformeren, målingerne og kommunikation. Disse beskrives hver især i følgende afsnit.
+
+\subsubsection{Trintransformer}
+Der er valgt en trintransformer, som simulering af belastning skal laves ud fra. Denne valgt trintransformer har følgende specifikationer. Det er dog besluttet ikke at lave større strømforbrug i systemet end 20mA. 
+
+\begin{enumerate}
+	\item Maks belastning af transformer er 20VA
+	\item Nominel spænding på primær siden er 24V
+	\item Nominel spænding på sekundær siden afhænger af trin, transformerne har 8 trin fra 0 til 8V.
+	\item Skal minimum levere 500mA til systemet. 
+\end{enumerate}
+
+\subsubsection{Måleenhed}
+Til en måleenhed burde der laves nøjagtigheds beregninger, og defineres præcision. Dette er der bestemte standarder til, men da det ikke er noget vi har haft undervisning i og vores projekt er "proof of concept". Er det besluttet at måleenheden skal kunne måle indenfor en bestemt procent af det rigtige værdig.
+
+\begin{enumerate}
+	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 Vrms
+	\item Måle spændingen med en præcision på $\pm$ 5\%
+	\item Måle strømmen ved trinskifteren og forbrugerne mellem 0 og 500mA
+	\item Måle strømmen med en præcision på $\pm$ 5\%
+	\item Måle og beregne power factor med en præcision på $\pm$ 5$\%$
+	\item Beregne THD med en præcision på $\pm$ 5$\%$
+\end{enumerate} 
+
+\subsubsection{kommunikation}
+
