--- a/ProjektRapport/sektioner/Arkitektur/BDD.tex
+++ b/ProjektRapport/sektioner/Arkitektur/BDD.tex
@@ -12,16 +12,16 @@ I dette afsnit ses blok definitionsdiagrammet for spændingsregulator. Se figur 
 	\label{fig:BDDSpaendingsregulator}
 \end{figure}
 
-Der arbejdes med tre overordnet blokke; Måleenhed, Styringsenhed og Trinskifter. Med udgangspunkt MoSCoW skal 
+Der arbejdes med tre overordnet blokke; Måleenhed, Styringsenhed og Trinskifter. Med udgangspunkt i MoSCoW er opgaverne hver blok skal løse beskrevet herunder:
 
 
-Måleenheden kunne måle spænding, strøm, power factor og harmoniske centralt og decentralt. Data herfra skal kommunikeres videre til styringsenheden. 
+Måleenheden skal kunne måle spænding, strøm, power factor og harmoniske, både centralt og decentralt. Data herfra skal kommunikeres videre til styringsenheden. 
 
 
-Styringsenheden skal kunne vise data på en skærm og burde kunne regulere Trinskifter automatisk. Der skal være muligheder for at regulere Trinskifter manuelt fra Styringsenheden. Den skal have et interface til kommunikatin med Måleenheden. Det er derfor besluttet at Styringsenhed har tre underblokke; Brugergrænseflade, Kontrolmodul og kommunikationsmodul.
+Styringsenheden skal kunne vise data på en skærm og burde kunne regulere Trinskifter automatisk. Der skal være muligheder for at regulere Trinskifter manuelt fra Styringsenheden. Den skal have et interface til kommunikation med Måleenheden. Det er derfor besluttet at Styringsenhed har tre underblokke; Brugergrænseflade, Kontrolmodul og Kommunikationsmodul.
 
 
 Trinskifter skal bestå af en trintransformer 24/0-8V og skal tilkobles en simuleret distributionslinje og flere forbrugere. Derudover skal den indeholde en form for styring til trintransformeren.
 
 
-For yderligere forklaring af blokkene se dokumentationen\footnote{Projektdokumentation, 5.1, Blok defintionsdiagram}
+For yderligere forklaring af blokkene se dokumentationen\footnote{Projektdokumentation, 5.1, Blok defintionsdiagram}.
