--- a/ProjektRapport/sektioner/forside.tex
+++ b/ProjektRapport/sektioner/forside.tex
@@ -12,7 +12,7 @@
 	{\Large
 	201509249 - Caroline Møller Sørensen\\
 	201611140 - Sophia Amailie Mortensen\\
-	xxxxxxxxx - Dennis Slot Larsen \\
+	201505195 - Dennis Slot Larsen \\
 	201505115 - Laurids Givskov Jørgensen\\
 	201508333 - Søren Jensen\\
 	13114 - Jeppe Hansen\\   }
