--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -164,6 +164,8 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Kravspecifikation}
 \include{sektioner/Krav}
 \input{sektioner/NotFunc}
+\input{sektioner/Krav}
+\input{sektioner/FunktionelleKrav}
 \chapter{Foranalyse}
 \include{sektioner/Foranalyse}
 \chapter{Arkitektur}
