--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -141,10 +141,11 @@ linkcolor=Black, citecolor=Black]{hyperref}
 
 %%%%%%%%%%%%%%%%%%%%%%%
              % RESUME & ABSTRACT %			
-\section*{Resume}
+\section{Resume}
 \include{sektioner/Resume}
-\section*{Abstract}
+\section{Abstract}
 \include{sektioner/Abstract}
+
 %%%%%%%%%%%%%%%%%%%%%%%
 
 
