ikke funk krav rapport

--- a/ProjektRapport/sektioner/NotFunc.tex
+++ b/ProjektRapport/sektioner/NotFunc.tex
@@ -27,4 +27,10 @@ Til en måleenhed burde der laves nøjagtigheds beregninger, og defineres præci
 \end{enumerate} 
 
 \subsubsection{kommunikation}
+For at sikre at der laves en pålidelig dokumentation, stilles der krav til at der i de fleste tilfælde ikke må ske fejl, men da det igen er "proof of concept" er det igen valgt ikke, at gøre hvis der skulle ske fejl i en forsendelse.
+
+\begin{enumerate}
+	\item Forsinkelsen på brugergrænsefladen ifht. ændringer i målte værdier må ikke overstige 2,5 sekund. 
+	\item 95\% af alle sendte data skal være korrekte, og uden forstyrrelser. 
+\end{enumerate} 
 
