MoSCoW rettet dokumentation

--- a/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
@@ -4,7 +4,7 @@
 \section{MoSCoW}
 
 \begin{itemize}
-\item{Systemet \textbf{skal} bestå af en trinskifter 24/0-8V}
+\item{Systemet \textbf{skal} bestå af en trintransformer 24/0-8V}
 \item{Systemet \textbf{skal} måle spænding, strøm, power factor og harmoniske centralt og decentralt}
 \item{Systemet \textbf{skal} vise data på en skærm}
 \item{Systemet \textbf{skal} simulere en distributionslinje og flere forbrugere}
