--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -169,6 +169,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Arkitektur}
 \include{sektioner/Arkitektur/BDD}
 \include{sektioner/Arkitektur/IBD}
+\include{sektioner/Arkitektur/Allokering}
 \chapter{Design af distributionslinje, belastning og trinskifter}
 \chapter{Design af Styringsenhed}
 \chapter{Design af Målenhed}
