--- a/ProjektRapport/sektioner/Arkitektur/Allokering.tex
+++ b/ProjektRapport/sektioner/Arkitektur/Allokering.tex
@@ -4,7 +4,7 @@
 
 \section{Allokeringsdiagram}
 
-Herunder ses allokeringsdiagrammet udviklet for systemet. Diagrammet er udviklet for at give et overblik over udviklingen af software og kommunikation i projektet. Et allokeringsdiagram giver et indblik i hvor forskellige dele af projektets funktionalitet skal programmeres, samt hvordan de enkelte enheder kommunikerer sammen. For yderlig beskrivelse af diagrammet se dokumentation\footnote{Projektdokumentation, 5.3, Allokeringsdiagram}.
+Herunder ses allokeringsdiagrammet udviklet for systemet. Diagrammet er udviklet for at give et overblik over implementeringen af software og kommunikation i projektet. Et allokeringsdiagram giver et indblik i hvilke fysiske dele, der vil blive brugt til at realisere softwaren på blokkene benyttet i de forrige diagrammer. For yderlig beskrivelse af diagrammet se dokumentation\footnote{Projektdokumentation, 5.3, Allokeringsdiagram}.
 
 
 \begin{figure}[htbp] % (alternativt [H])
