Indledning til arkitektur

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -169,6 +169,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Foranalyse}
 \include{sektioner/Foranalyse}
 \chapter{Arkitektur}
+\include{sektioner/Arkitektur/Indledning}
 \include{sektioner/Arkitektur/BDD}
 \include{sektioner/Arkitektur/IBD}
 \chapter{Design af distributionslinje, belastning og trinskifter}
