ikke funk og afgrænsning

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -166,6 +166,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Krav}
 \input{sektioner/FunktionelleKrav}
 \input{sektioner/NotFunc}
+\input{sektioner/afgranse}
 \chapter{Foranalyse}
 \include{sektioner/Foranalyse}
 \chapter{Arkitektur}
