--- a/ProjektRapport/sektioner/afgranse.tex
+++ b/ProjektRapport/sektioner/afgranse.tex
@@ -3,7 +3,7 @@
 
 
 \section{Afgrænsning}
-Afgrænsning af projektet er lavet som MoSCoW. Der beskrives hvad, der skal med i projektetfor at det fungere og hvad der ikke er så vigtigt.
+Afgrænsning af projektet er lavet som MoSCoW. Der beskrives hvad, der skal med i projektet, for at det fungere og hvad der ikke er så vigtigt. Der er i projektet ikke taget højde for optimering, men kun at der skal være et færdigt funktionelt produkt.
 \subsubsection{MoSCoW}
 
 \begin{itemize}
