--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -174,8 +174,14 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \include{sektioner/Arkitektur/IBD}
 \include{sektioner/Arkitektur/Allokering}
 \chapter{Design af distributionslinje, belastning og trinskifter}
+\chapter{Design af Måleenhed}
 \chapter{Design af Styringsenhed}
-\chapter{Design af Målenhed}
+\include{sektioner/Styringsenhed/Indledning}
+\include{sektioner/Styringsenhed/Foranalyse}
+\include{sektioner/Styringsenhed/Kontrolmodul}
+\include{sektioner/Styringsenhed/Brugergraenseflade}
+\include{sektioner/Styringsenhed/Kommunikationsmodul}
+\include{sektioner/Styringsenhed/Delkonklusion}
 \chapter{Integrationstest}
 \chapter{Accepttest}
 \chapter{Resultat og Diskussion}
