--- a/ProjektRapport/sektioner/NotFunc.tex
+++ b/ProjektRapport/sektioner/NotFunc.tex
@@ -15,7 +15,7 @@ Der er valgt en trintransformer, som simulering af belastning skal laves ud fra.
 \end{enumerate}
 
 \subsubsection{Måleenhed}
-Til en måleenhed burde der laves nøjagtigheds beregninger, og defineres præcision. Dette er der bestemte standarder til, men da det ikke er noget vi har haft undervisning i og projektet er "proof of concept". Er det besluttet at måleenheden skal kunne måle indenfor en bestemt procent af det rigtige værdig og ikke gå længere ned i nøjagtigheds begreberne.
+Til en måleenhed burde der laves nøjagtigheds beregninger, og defineres præcision. Dette er der bestemte standarder til, men da det ikke er noget vi har haft undervisning i og projektet er "proof of concept". Er det besluttet at måleenheden skal kunne måle indenfor en bestemt procent af det rigtige værdi og ikke gå længere ned i nøjagtigheds begreberne.
 
 \begin{enumerate}
 	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 Vrms
@@ -26,7 +26,7 @@ Til en måleenhed burde der laves nøjagtigheds beregninger, og defineres præci
 	\item Beregne THD med en præcision på $\pm$ 5$\%$
 \end{enumerate} 
 
-\subsubsection{kommunikation}
+\subsubsection{Kommunikation}
 For at sikre at der laves en pålidelig kommunikation, stilles der krav til at der i de fleste tilfælde ikke må ske fejl, men da det igen er "proof of concept" er det valgt ikke, at gøre noget hvis der skulle ske fejl i en forsendelse.
 
 \begin{enumerate}
