fjernet sideskift fra arkitektur

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -167,10 +167,10 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Foranalyse}
 \include{sektioner/Foranalyse}
 \chapter{Arkitektur}
-\include{sektioner/Arkitektur/Indledning}
-\include{sektioner/Arkitektur/BDD}
-\include{sektioner/Arkitektur/IBD}
-\include{sektioner/Arkitektur/Allokering}
+\input{sektioner/Arkitektur/Indledning}
+\input{sektioner/Arkitektur/BDD}
+\input{sektioner/Arkitektur/IBD}
+\input{sektioner/Arkitektur/Allokering}
 \chapter{Design af distributionslinje, belastning og trinskifter}
 \chapter{Design af Måleenhed}
 \chapter{Design af Styringsenhed}
