--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -134,16 +134,15 @@ linkcolor=Black, citecolor=Black]{hyperref}
 %%%%%%%%%%%%%%%%%%%%%%%
 		       % FORSIDEN %			
 %%%%%%%%%%%%%%%%%%%%%%%
-
 \include{sektioner/forside}
-
 \frontmatter
-
 %%%%%%%%%%%%%%%%%%%%%%%
+
              % RESUME & ABSTRACT %			
+             
+%%%%%%%%%%%%%%%%%%%%%%%            
 \section{Resume}
 \section{Abstract}
-
 %%%%%%%%%%%%%%%%%%%%%%%
 
 
@@ -155,6 +154,8 @@ linkcolor=Black, citecolor=Black]{hyperref}
 
 %%%%%%%%%%%%%%%%%%%%%%%
                         % KAPITLER %			
+%%%%%%%%%%%%%%%%%%%%%%%                        
+\mainmatter
 \chapter{Forord}                       
 \chapter{Indledning}
 \include{sektioner/Indledning}
