--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -158,7 +158,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \mainmatter
 \chapter{Forord}                       
 \chapter{Indledning}
-\include{sektioner/Indledning}
+\input{sektioner/Indledning}
 \chapter{Kravspecifikation}
 \input{sektioner/Krav}
 \input{sektioner/FunktionelleKrav}
