--- a/ProjektRapport/sektioner/Arkitektur/BDD.tex
+++ b/ProjektRapport/sektioner/Arkitektur/BDD.tex
@@ -5,14 +5,14 @@
 
 I dette afsnit ses blok definitionsdiagrammet for spændingsregulator. Se figur \ref{fig:BDDSpaendingsregulator}. BDD'et er lavet for at give et overordnet indblik i de blokke systemet består af.
 
-\begin{figure}[htbp] % (alternativt [H])
+\begin{figure}[H] % (alternativt [H])
 	\centering
-	\includegraphics[width=0.9\textwidth]{Figure/BDDSpaendingsregulator}
+	\includegraphics[width=0.7\textwidth]{Figure/BDDSpaendingsregulator}
 	\caption{BDD Spændingsregulator}
 	\label{fig:BDDSpaendingsregulator}
 \end{figure}
 
-Der arbejdes med tre overordnet blokke; Måleenhed, Styringsenhed og Trinskifter. Med udgangspunkt i MoSCoW er opgaverne hver blok skal løse beskrevet herunder:
+Der arbejdes med tre overordnede blokke; Måleenhed, Styringsenhed og Trinskifter. Med udgangspunkt i MoSCoW er opgaverne hver blok skal løse beskrevet herunder:
 
 
 Måleenheden skal kunne måle spænding, strøm, power factor og harmoniske, både centralt og decentralt. Data herfra skal kommunikeres videre til styringsenheden. 
