--- a/ProjektRapport/sektioner/Styringsenhed/Indledning.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Indledning.tex
@@ -2,3 +2,7 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{Indledning}
+
+I dette afsnit vil der blive gået i dybde med den samlede styringsenhed. Herunder vil der blandt andet være fokus på nogle af de valg der er taget i løbet af designfasen for styringsenhed og de enkelte moduler den består af. Derudover vil selve implementeringen af styringsenhedens software på dens processorere være beskrevet, men der vil dog i rapporten kun blive beskrevet vigtige og derudover  udvalgte eksempler.
+
+Der refereres til dokumentationen\footnote{Projektdokumentation, 10, Design af Styringsenhed} for at se det fulde designafsnit.
