--- a/ProjektRapport/sektioner/FunktionelleKrav.tex
+++ b/ProjektRapport/sektioner/FunktionelleKrav.tex
@@ -3,7 +3,7 @@
 
 \section{Funktionelle krav}
 
-Funktionaliteten af systemet er beskrevet i 3 use cases, som beskriver brugerens interaktion med systemet. Use casene vil her blive kort beskrevet, og et use case diagram er vist i Figur \ref{fig:UsecaseDiagram}.
+Funktionaliteten af systemet er beskrevet i tre use cases, som beskriver brugerens interaktion med systemet. Use casene vil her blive kort beskrevet, og et use case diagram er vist i Figur \ref{fig:UsecaseDiagram}.
  Den automatiske spændingsregulering vil ligeledes blive beskrevet, og vist i et tilstandsdiagram på Figur \ref{fig:autoSTM}.
   Se dokumentation\footnote{Projektdokumentaion, 3.3, Funktionelle krav} for uddybning af funktionelle krav. 
 
