--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -156,7 +156,8 @@ linkcolor=Black, citecolor=Black]{hyperref}
                         % KAPITLER %			
 %%%%%%%%%%%%%%%%%%%%%%%                        
 \mainmatter
-\chapter{Forord}                       
+\chapter{Forord}  
+\input{sektioner/Forord}                     
 \chapter{Indledning}
 \input{sektioner/Indledning}
 \chapter{Kravspecifikation}
