--- a/ProjektRapport/sektioner/Indledning.tex
+++ b/ProjektRapport/sektioner/Indledning.tex
@@ -19,4 +19,4 @@ For at kunne holde et ønsket spændingsniveau vil der i projektet implementeres
 	\label{fig:Rigtbillede}
 \end{figure}
 
-På figur \ref{fig:Rigtbillede} ses et rigt billede til at give oveblik over Spændingsregulatoren. Billedet viser trintransformeren, der forsyner distributionslinjen, Måleenheder, der måler aktuelle værdier på linjen og en Styringsenhed, der regulerer trintransformeren på baggrund af disse værdier. 
+På figur \ref{fig:Rigtbillede} ses en illustration, der giver oveblik over Spændingsregulatoren. Billedet viser trintransformeren, der forsyner distributionslinjen, Måleenheder, der måler aktuelle værdier på linjen og en Styringsenhed, der regulerer trintransformeren på baggrund af disse værdier. 
