--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -171,7 +171,8 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Arkitektur/IBD}
 \input{sektioner/Arkitektur/Allokering}
 \chapter{Design af distributionslinje, belastning og trinskifter}
-\chapter{Design af Måleenhed}
+\chapter{Måleenhed}
+\input{sektioner/Maaleenhed/THD}
 \chapter{Design af Styringsenhed}
 \include{sektioner/Styringsenhed/Indledning}
 \include{sektioner/Styringsenhed/Foranalyse}
