--- a/ProjektRapport/sektioner/NotFunc.tex
+++ b/ProjektRapport/sektioner/NotFunc.tex
@@ -15,7 +15,7 @@ Der er valgt en trintransformer, som simulering af belastning skal laves ud fra.
 \end{enumerate}
 
 \subsubsection{Måleenhed}
-Til en måleenhed burde der laves nøjagtighedsberegninger, og defineres præcision. Dette er der bestemte standarder til, men da det ikke er noget vi har haft undervisning i og projektet er "proof of concept" er det besluttet at måleenheden skal kunne måle indenfor en bestemt procentsats af det rigtige værdi og ikke gå længere ned i nøjagtighedsbegreberne.
+Til en måleenhed burde der laves nøjagtigheds beregninger, og defineres præcision. Dette er der bestemte standarder til, men da gruppen ikke har modtager undervisning i emnet og projektet er proof of concept. Er det besluttet at måleenheden skal kunne måle indenfor en bestemt procent af det rigtige værdi og ikke gå længere ned i nøjagtigheds begreberne.
 
 \begin{enumerate}
 	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 Vrms
