--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -172,6 +172,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Arkitektur/Allokering}
 \chapter{Design af distributionslinje, belastning og trinskifter}
 \chapter{Måleenhed}
+\input{sektioner/Maaleenhed/Foranalyse}
 \input{sektioner/Maaleenhed/THD}
 \chapter{Design af Styringsenhed}
 \include{sektioner/Styringsenhed/Indledning}
