Teoriafsnit i styringsenged + input

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -173,12 +173,13 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Design af distributionslinje, belastning og trinskifter}
 \chapter{Design af Måleenhed}
 \chapter{Design af Styringsenhed}
-\include{sektioner/Styringsenhed/Indledning}
-\include{sektioner/Styringsenhed/Foranalyse}
-\include{sektioner/Styringsenhed/Kontrolmodul}
-\include{sektioner/Styringsenhed/Brugergraenseflade}
-\include{sektioner/Styringsenhed/Kommunikationsmodul}
-\include{sektioner/Styringsenhed/Delkonklusion}
+\input{sektioner/Styringsenhed/Indledning}
+\input{sektioner/Styringsenhed/Foranalyse}
+\input{sektioner/Styrinsenhed/Teori}
+\input{sektioner/Styringsenhed/Kontrolmodul}
+\input{sektioner/Styringsenhed/Brugergraenseflade}
+\input{sektioner/Styringsenhed/Kommunikationsmodul}
+\input{sektioner/Styringsenhed/Delkonklusion}
 \chapter{Integrationstest}
 \chapter{Accepttest}
 \chapter{Resultat og Diskussion}
