--- a/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
@@ -1,2 +1,7 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
+
+\section{Kontrolmodul}
+
+Kontrolmodulet består af en Siemens PLC S7-1200 med signalmodulet AQ1x12BIT. Det kan tilgåes gennem en switch af typen CSM 1277.
+Softwaren består af to dele; en kommunikationsdel med interface til kommunikationsmodulet og en kontroldel med interface til Trinskifter. Den detaljeret gennemgang af softwaren kan findes i dokumentationen.\footnote{Projektdokumentation, 10.1, Kontrolmodul}
