--- a/ProjektDokumentation/bibfil.bib
+++ b/ProjektDokumentation/bibfil.bib
@@ -55,3 +55,14 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 	Title = {Cypress forum},
 	Url = {http://www.cypress.com/forum/psoc-5-device-programming/how-implement-fft-psoc5},
 	Urldate = {2017-04-10}}
+
+@online{Shield,
+	Title = {Arduino Ethernet Shield R3},
+	Url = {https://www.arduino.cc/en/Main/ArduinoEthernetShieldV1},
+	Urldate = {2017-04-10}}
+
+@online{Ethernet,
+	Title = {Arduino Ethernet.h library},
+	Url = {https://www.arduino.cc/en/reference/ethernet},
+	Urldate = {2017-04-10}}
+
