--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -178,6 +178,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \include{sektioner/Styringsenhed/Kontrolmodul}
 \include{sektioner/Styringsenhed/Brugergraenseflade}
 \include{sektioner/Styringsenhed/Kommunikationsmodul}
+\include{sektioner/Styringsenhed/Test}
 \include{sektioner/Styringsenhed/Delkonklusion}
 \chapter{Integrationstest}
 \chapter{Accepttest}
