--- a/ProjektRapport/sektioner/Styringsenhed/Foranalyse.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Foranalyse.tex
@@ -1,3 +1,16 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
+\section{Foranalyse for Styringsenhed}
+
+\subsection{Kontrolmodul og Brugergrænseflade}
+
+IOA kode
+PLC og HMI
+
+\subsection{Kommunikationsmodul}
+
+Komunikationsmodul + shields
+Kommunikationsformer
+%Arduino udviklingsmiljø
+
