rettet merge conflict

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -170,7 +170,10 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Arkitektur/BDD}
 \input{sektioner/Arkitektur/IBD}
 \input{sektioner/Arkitektur/Allokering}
-\chapter{Design af distributionslinje, belastning og trinskifter}
+\chapter{Distributionslinje, belastning og trinskifter}
+\input{sektioner/Distributionslinje}
+\input{sektioner/Belastning}
+\input{sektioner/Trinskifter}
 \chapter{Måleenhed}
 \input{sektioner/Maaleenhed/Foranalyse}
 \input{sektioner/Maaleenhed/THD}
