Froanalyse kontorlmodul og brugergræsneflade

--- a/ProjektRapport/sektioner/Styringsenhed/Foranalyse.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Foranalyse.tex
@@ -4,12 +4,12 @@
 \section{Foranalyse for Styringsenhed}
 
 \subsection{Kontrolmodul og Brugergrænseflade}
+Det er en oplagt mulighed at anvende en PLC og et HMI, som Kontrolmodul og Brugergrænseflade i projektet. Dette skyldes at der, som krav til projektet skulle anvendes relevante faglige elementer fra semestrets kurser. Faget Instrumentering og Automatisering(IOA) omhandler netop brugen af PLC og HMI i industrien. Hermed kommer to gode argumenter for PLC og HMI; relevant faglige viden anvendes og i "den virkelige verden" ville det være oplagt at bruge lignende enheder til et projekt som dette.
 
-IOA kode
-PLC og HMI
+PLC'en kan programmeres i flere forskellig sprog. Ladder er dog blevet valgt, fordi det er det mest anvendte i IOA. Desuden er det et krav til projektet at en bruger skal kunne interagere med systemet, hvilket opnåes gennem HMI'et.
 
 \subsection{Kommunikationsmodul}
-
+Krav: Systemet skal omfatte pålidelig transmission af data mellem udvalgte enheder.
 Komunikationsmodul + shields
 Kommunikationsformer
 %Arduino udviklingsmiljø
