Froanalyse lidt mere

--- a/ProjektRapport/sektioner/Styringsenhed/Foranalyse.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Foranalyse.tex
@@ -8,6 +8,8 @@ Det er en oplagt mulighed at anvende en PLC og et HMI, som Kontrolmodul og Bruge
 
 PLC'en kan programmeres i flere forskellig sprog. Ladder er dog blevet valgt, fordi det er det mest anvendte i IOA. Desuden er det et krav til projektet at en bruger skal kunne interagere med systemet, hvilket opnåes gennem HMI'et.
 
+Kravet om pålidelig transmission af data mellem udvalgte enheder understøttede også en PLC, da denne indeholder mulighed for LAN kommunikation gennem en RJ-45 port.
+
 \subsection{Kommunikationsmodul}
 Krav: Systemet skal omfatte pålidelig transmission af data mellem udvalgte enheder.
 Komunikationsmodul + shields
