--- a/ProjektRapport/sektioner/Styringsenhed/Kommunikationsmodul.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Kommunikationsmodul.tex
@@ -3,4 +3,6 @@
 
 \section{Kommunikationsmodul}
 
-Kommunikationsmodulet består af en Arduino Mega2560 forbundet med et Ethernet Shield R3. Kommunikationsmodulet står for kommunikationen mellem Måleenhederne og Kontrolmodulet. 
+Kommunikationsmodulet består af en Arduino Mega2560 forbundet til et Ethernet Shield R3. Kommunikationsmodulet står for kommunikationen mellem Måleenhederne og Kontrolmodulet, det skal dermed modtage data fra Måleenhederne over UART kommunikation og sende det videre til Kontrolmodulet ved brug af TCP kommunikation. 
+
+Arduinoen opsætter Ethernet Shield'et ved brug af en SPI forbindelse, der oprettes af SPI.h biblioteket, der kaldes som det første i koden. Dernæst er Ethernet.h biblioteket kaldt, for at kunne benytte de meget brugbare funktioner i dette bibliotek. 
