--- a/ProjektRapport/bibfil.bib
+++ b/ProjektRapport/bibfil.bib
@@ -62,3 +62,10 @@ For at referencerne opdaterer sig skal der compiles, køres "Bibtex 8-bit" komma
 	Title = {Sikkerhedsstyrelsen},
 	Url = {https://www.sik.dk/Global/Publikationer/Artikler/Artikler-fra-Electra/2009/Spaendingsfald-kan-faa-konsekvenser-for-sikkerheden},
 	Urldate = {2017-05-23}}
+	
+	
+@online{shannon,
+	Date-Modified = {2017-05-20 00:00:00 +0000},
+	Title = {Shannons sampling theorem},
+	Url = {https://en.wikipedia.org/wiki/Nyquist%E2%80%93Shannon_sampling_theorem},
+	Urldate = {2017-05-23}}	
