tilføjet design dokument

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -177,6 +177,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \chapter{Måleenhed}
 \input{sektioner/Maaleenhed/Foranalyse}
 \input{sektioner/Maaleenhed/THD}
+\input{sektioner/Maaleenhed/Desing}
 \chapter{Design af Styringsenhed}
 \input{sektioner/Styringsenhed/Indledning}
 \input{sektioner/Styringsenhed/Foranalyse}
