--- a/ProjektRapport/sektioner/Styringsenhed/Kommunikationsmodul.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Kommunikationsmodul.tex
@@ -2,6 +2,7 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{Kommunikationsmodul}
+\label{Kommunikationsmodul}
 
 I starten af projektet var det tænkt at et separat kommunikationsmodul ikke var nødvendigt, da PSoC'en med et tilhørende Ethernetmodul ENC28J60 burde 
 
