--- a/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Kontrolmodul.tex
@@ -17,15 +17,38 @@ Først og fremmest skulle flere Måleenheder kunne kommunikere med det samme kon
 Næste beslutning gik på valget af protokol til Ethernet kommunikation. TCP var det oplagte valg for at sikre pålidelig kommunikation, selvom UDP også var en kendt protokol fra faget Internet kommunikationsnetværk(IKN).
 
 
-Udvilingsværktøjet TIA Portal V13 har gode muligheder for at sætte TCP kommunikation op til forskellige ikke Siemens produkter, gennem dets open user communication. Først blev blokkene TSEND\_C og TRCV\_C forsøgt anvendt. Disse blokke har dog indbygget funktionalitet i forbindelse med at oprette og nedlægge forbindelsen, hvilket var uhensigtmæssigt, når der skulle være en fyldene datastrøm. Det endelig valg blev herfor blokkene TCON, TDISCON, TSEND og TRCV, hvor man som programmør kan styre oprettelse og nedlæggelse af forbindelsen med TCON og TDISCON.
+Udvilingsværktøjet TIA Portal V13 har gode muligheder for at sætte TCP kommunikation op til forskellige ikke Siemens produkter, gennem dets open user communication. Først blev blokkene TSEND\_C og TRCV\_C forsøgt anvendt. Disse blokke har dog indbygget funktionalitet i forbindelse med at oprette og nedlægge forbindelsen, hvilket var uhensigtmæssigt, når der skulle være en fyldene datastrøm. Det endelig valg blev herfor blokkene TCON, TDISCON, TSEND og TRCV, hvor man som programmør kan styre oprettelse og nedlæggelse af forbindelsen med TCON og TDISCON. På figur \ref{fig:TSEND} ses blokken TSEND, som eksempel på open user communication blokkene.
+
+\begin{figure}[H] % (alternativt [H])
+	\centering
+	\includegraphics[width=0.5\textwidth]{Figure/TSEND}
+	\caption{Blokken TSEND}
+	\label{fig:TSEND}
+\end{figure}
 
 
 Med en pålidelig og testet TCP kommunikation, var de næste overvejelser angående styringen af disse blokke. Her blev det besluttet at et client/server forhold ville være bedst. Kontrolmodulet er i den sammenhæng client og skal forespørge data fra serveren, kommunikationsmodulet.
-Da systemet ikke er et beskyttelsessystem, kræver det ikke hurtig reaktion mellem sensor og aktuator. Derfor blev det valgt at det kun var nødvendigt at opdatere data hvert 2 sekunder. Dette blev realiseret med to separate netværk; et tilknyttet FC'en med TSEND og et tilknyttet FC'en med TRCV.
+Da systemet ikke er et beskyttelsessystem, kræver det ikke hurtig reaktion mellem sensor og aktuator. Derfor blev det valgt at det kun var nødvendigt at opdatere data hvert 2 sekunder. Dette blev realiseret med to separate netværk; et tilknyttet FC'en med TSEND og et tilknyttet FC'en med TRCV. På figur \ref{fig:ValgAfEnhedSend} ses netværket tilknyttet TSEND.
 
+\begin{figure}[H] % (alternativt [H])
+	\centering
+	\includegraphics[width=1\textwidth]{Figure/valgAfEnhedSend}
+	\caption{Netværket der styrer hvilken enhed der forespørges data fra}
+	\label{fig:ValgAfEnhedSend}
+\end{figure}
 
 FC'er er valgt da tanken var at hukommelsen skulle ligge andetsteds i koden. Det er dog blevet nødvendigt at oprette en global DB, for kunne styre variable i forbindelse med styring af koommunikationen. For yderlige uddybelse, se dokumentationen\footnote{Projektdokumentation, 10.1.1, TCP kommunikation}.
 
 \subsection{Styring af Trinskifter}
 
+Angående styring af Trinskifteren blev det tidligt besluttet at benytte dens analoge udgange på Q0.6, Q0.7 og Q1.0 til styringen af relæerne på triskifter. Der henvises til Trinskifter for mere om relækredsløbet !!!!!TRINSKIFTERHENVISNING!!!!.
+Samtidig er projektet proof of concept, så det er kun spændingsmålinger fra en forbruger der vil blive reguleret i forhold til. Dette simplificere den FB, der udvikles til denne styring væsentligt, da der kun er et input.
 
+
+Indsæt billede af Trinskifterblok
+
+Skriv lidt om overvejelser i forhold til skift.
+
+Multiskift.
+
+Emirs forslag med det ikke behøver reagere instant.
