--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -178,6 +178,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Maaleenhed/Foranalyse}
 \input{sektioner/Maaleenhed/THD}
 \input{sektioner/Maaleenhed/Hardware}
+\input{sektioner/maaleenhed/softwareS}
 \input{sektioner/Maaleenhed/SoftwareJeppe}
 \chapter{Design af Styringsenhed}
 \input{sektioner/Styringsenhed/Indledning}
