--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -179,6 +179,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Maaleenhed/THD}
 \input{sektioner/Maaleenhed/Hardware}
 \input{sektioner/maaleenhed/softwareS}
+\input{sektioner/maaleenhed/ADC}
 \input{sektioner/Maaleenhed/SoftwareJeppe}
 \chapter{Design af Styringsenhed}
 \input{sektioner/Styringsenhed/Indledning}
